# juri

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  book.toml  getting-started.html  index.html  index.js  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  gh-pages.yml
benches/: Cargo.toml
docs/: SUMMARY.md  getting-started.md
docs/plugin/: introduction.md  plugin-static-file.md
docs/request/: form-data.md  introduction.md
docs/router/: introduction.md  route-matching-syntax.md
docs/web-socket/: introduction.md
examples/: Cargo.toml  main.rs
examples/api/: error.rs  json.rs  mod.rs  try_mode.rs  upload.rs  views.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs  views.rs
examples/basic/src/json/: mod.rs
examples/basic/src/route/: mod.rs
examples/basic/src/upload/: mod.rs
examples/basic/src/url/: mod.rs
examples/basic/static/js/: load_static_file.js
examples/example/: Cargo.toml
examples/example/src/: main.rs
examples/example/src/api/: json.rs  mod.rs  try_mode.rs  upload.rs  views.rs
examples/example/src/user/: mod.rs  views.rs
examples/example/template/: upload_file.html
examples/static/css/: load_static_file.css
examples/template/: static_file.html
examples/web-scoket/: Cargo.toml
examples/web-scoket/src/: main.rs
examples/web-scoket/static/js/: index.js
examples/web-scoket/template/: index.html
examples/web-socket/: Cargo.toml
examples/web-socket/src/: main.rs  views.rs
examples/web-socket/static/js/: index.js
examples/web-socket/template/: index.html
juri/: CHANGELOG.md  Cargo.toml  README.md
juri-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
juri-macros/src/: generate.rs  lib.rs  utils.rs
juri/src/: config.rs  error.rs  lib.rs  prelude.rs
juri/src/byte/: mod.rs
juri/src/byte/read/: form_data.rs  line.rs  mod.rs  stream.rs
juri/src/byte/receive/: mod.rs  newline.rs
juri/src/byte/send/: mime.rs  mod.rs  status_code.rs
juri/src/cache/: main.rs
juri/src/http/: method.rs  mod.rs  request.rs  response.rs
juri/src/http/cookie/: mod.rs
juri/src/http/headers/: mod.rs
juri/src/json/: mod.rs  request.rs  response.rs
juri/src/plugin/: mod.rs  static_file.rs
juri/src/request/: http_method.rs  mod.rs
juri/src/response/: into.rs  mod.rs
juri/src/routing/: at_path.rs  conversion_router.rs  conversion_router_mod.rs  http_handler.rs  match_router.rs  mod.rs  route.rs
juri/src/routing/append/: at_path.rs  mod.rs  router_route.rs
juri/src/routing/match_router/: mod.rs  route.rs  router.rs
juri/src/routing/route/: mod.rs  route.rs  ws_route.rs
juri/src/server/: handle.rs  mod.rs
juri/src/web_socket/: config.rs  frame.rs  message.rs  mod.rs  request.rs  response.rs  stream.rs
plugin/: introduction.html  plugin-static-file.html
request/: form-data.html  introduction.html
router/: introduction.html  route-matching-syntax.html
src/: byte.rs  config.rs  error.rs  handle.rs  lib.rs  main.rs  plugin.rs  request.rs  response.rs  result.rs  router.rs  run.rs  setting.rs  thread.rs
src/api/: views.rs
src/byte/: byte.rs  mod.rs  receive.rs  send.rs  stream.rs
src/cache/: main.rs
src/json/: mod.rs  request.rs  response.rs
src/lib/: handle.rs  main.rs  mod.rs
src/plugin/: static_file.rs
src/request/: http_method.rs
src/routing/: conversion_router_mod.rs  http_method.rs  match_router_mod.rs  mod.rs
src/server/: mod.rs
web-socket/: introduction.html
