[package]
name = "juri"
version = "0.1.0"
edition = "2021"

authors = ["luoxiaozero <luoxiaozero@163.com>"]
description = "http service"
keywords = ["http"]
homepage = "https://github.com/luoxiaozero/juri"
repository = "https://github.com/luoxiaozero/juri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
