[package]
name = "juri"
version = "0.1.0"
edition = "2021"

authors = ["luoxiaozero <luoxiaozero@163.com>"]
description = "http service"
keywords = ["http"]
homepage = "https://github.com/luoxiaozero/juri"
repository = "https://github.com/luoxiaozero/juri"
license = "MIT"


[[example]]
# cargo run --example dev
name = "dev"
path = "examples/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
