[package]
name = "juri"
version = "0.2.1"
edition = "2021"

authors = ["luoxiaozero <luoxiaozero@163.com>"]
description = "http service"
keywords = ["http"]
homepage = "https://github.com/luoxiaozero/juri"
repository = "https://github.com/luoxiaozero/juri"
license = "MIT"


[[example]]
# cargo run --example dev
name = "dev"
path = "examples/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.83"
colored = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.25"

[dev-dependencies]
