[package]
name = "juri-macros"
version = "0.2.0-alpha.1"
edition = "2021"

authors = ["luoxiaozero <luoxiaozero@163.com>"]
description = "juri macros"
keywords = ["http", "macro", "juri"]
homepage = "https://github.com/luoxiaozero/juri"
repository = "https://github.com/luoxiaozero/juri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.21"
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0.47"