[package]
name = "juri"
version = "0.4.0-alpha.1"
edition = "2021"

authors = ["luoxiaozero <luoxiaozero@163.com>"]
description = "http service"
keywords = ["http", "juri"]
homepage = "https://github.com/luoxiaozero/juri"
repository = "https://github.com/luoxiaozero/juri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.83"
colored = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
juri-macros = { path = "../juri-macros", version = "0.2.0-alpha.1" }
futures-util = "0.3.25"
async-trait = "0.1.58"
byteorder = "1.4.3"

# 加密 编码
sha1 = "0.10.5"
base64 = "0.20.0"

[dev-dependencies]
