[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juri = { path = "../../juri" }
serde = "1.0.144"
serde_derive = "1.0.144"
async-std = { version = "1.12.0", features = ["attributes"] }